FIx #354 Grader Report: Icons in webkit overlapping

--- a/style/extras.css
+++ b/style/extras.css
@@ -24,6 +24,10 @@ a.back-to-top {
     margin-bottom: 20px;
 }
 
+.gradereport-grader-table img {
+    max-width: none;
+}
+
 .singleselect {
     display: inline-block;
     max-width: 100%;
